ligolang/src/test/contracts/negative/parametric_types2.religo
type foo('a) = ('a , 'a);
type bar = foo (int,string);